--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -33,16 +33,32 @@
 }
 .logo {
     margin-bottom: 40px;
+    
 }
 .LeftSideContainer{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     min-width: 500px;
-    margin-right: 60px;
+    margin-right: 70px;
 }
-.text{
+.link{
     margin: 0px;
+    max-width: 100px;
+    border-radius: 15px;
+    background-color: white;
+    text-align: center;
+}
+.linkContainer{
+    padding: 10px;
+}
+.link a{
+    text-decoration: none;;
+    font-weight: 400;
+    color: rgb(31, 31, 31);
+}
+.link:hover{
+   transform: scale(1.1); 
 }
 .textContainer{
    
