--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -18,10 +18,6 @@
     height: 100%;
     align-items: center;
 }
-
-.HeaderContainer {
-    
-}
 .HeaderText {
     font-family: 'Roboto Slab';
     font-style: normal;
@@ -34,13 +30,6 @@
 .logo {
     margin-bottom: 40px;
     
-}
-.LeftSideContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    min-width: 500px;
-    margin-right: 70px;
 }
 .link{
     margin: 0px;
@@ -60,22 +49,12 @@
 .link:hover{
    transform: scale(1.1); 
 }
-.textContainer{
-   
-}
-.RightSideContainer{
-
-}
-
 .chessboard{
     width: 280px;
     height: 278px;
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.58);
     border-radius: 47px;
     background: linear-gradient(143.71deg, #040730 2.29%, rgba(4, 7, 48, 0.12) 93.32%), url(../../assets/chessboard22.jpg);;
-}
-.chessboardContainer{
-
 }
 .playButtonContainer{
     position: relative;
@@ -98,3 +77,60 @@
 .rightMargin {
     width: 100%;
 }
+.LeftSideContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 500px;
+    margin-right: 70px;
+}
+.RightSideContainer{
+
+}
+.contentContainer-enter {
+    opacity: 0;
+    transform: scale(1.1);
+  }
+  
+.contentContainer-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 600ms, transform 600ms;
+  }
+  
+  .contentContainer-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .contentContainer-exit-active {
+    opacity: 0;
+    transform: scale(1.2);
+    transition: opacity 600ms, transform 600ms;
+  }
+
+ 
+  .gameComponent{
+
+  }
+  .gameComponent-enter {
+    opacity: 0;
+    transform: scale(1.1);
+  }
+  
+.gameComponent-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 600ms, transform 600ms;
+  }
+  
+  .gameComponent-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .gameComponent-exit-active {
+    opacity: 0;
+    transform: scale(1.2);
+    transition: opacity 600ms, transform 600ms;
+  }
