--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,48 @@
   justify-content: center; 
   align-items: center; 
 }
+
+
+.LandingPageContainer-enter {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.LandingPageContainer-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 600ms, transform 600ms;
+}
+
+.LandingPageContainer-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.LandingPageContainer-exit-active {
+  opacity: 0;
+  transform: scale(1.2);
+  transition: opacity 600ms, transform 600ms;
+}
+
+.gameComponent-enter {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.gameComponent-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 600ms, transform 600ms;
+}
+
+.gameComponent-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.gameComponent-exit-active {
+  opacity: 0;
+  transform: scale(1.2);
+  transition: opacity 600ms, transform 600ms;
+}
