style(roboto): remove the Roboto font family from all over the app in favor of the Theme Font

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,11 @@ html, body, #root {
   width: 100%;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto', 'Open Sans', 'Roboto Slab', sans-serif;
+  font-family: 'Lato', 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
