--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ body {
   -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
+
+  background-color: #F6F8FB;
 }
 
 
