--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ code {
 /* Taken from https://medium.com/appscope/designing-native-like-progressive-web-apps-for-ios-1b3cdda1d0e8 */
 body {
   background-color: #f6f8fb;
+  color: #001B36;
 }
 
 @media (hover: none) {
